--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,7 +37,7 @@ html {
   }
 
   img{
-      width: 100%;
+      max-width: 100%;
   }
 
   .contenedor{
@@ -62,4 +62,56 @@ html {
   h3{
       font-size: 2.4rem;
   }
+
+  /* header  */
+   .header{
+       display: flex;
+       justify-content: center;
+   }
+
+   .header__logo{
+       margin: 3rem 0;
+   }
+
+   /* footer  */
+
+   .footer{
+       background-color: var(--primarioOscuro);
+       padding: 1rem 0;
+       margin-top: 2rem;
+
+   }
+
+   .footer__texto{
+       font-family: var(--fuentePrincipal);
+       text-align: center;
+       font-size: 2.2rem;
+
+   }
+
+   /* navegacion */
+   .navegacion{
+       background-color: var(--primarioOscuro);
+       padding: 1.5rem 0;
+       display: flex;
+       justify-content: center;
+       /* gap: 3rem; forma de separacion nueva..no la soporta todos los navegadores */
+   }
+
+   .navegacion__enlace{
+       font-family: var(--fuentePrincipal);
+       color: var(--blanco);
+       font-size: 3rem;
+       margin-right: 2rem;
+
+   }
+
+   .navegacion__enlace:last-of-type{
+       margin-right: 0;
+   }
+   
+   .navegacion__enlace--activo,
+   .navegacion__enlace:hover{
+       color: var(--secundario);
+   }
 
