--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,9 +1,9 @@
-:root{
-    --primario:#9c2780;
-    --primarioOscuro:#891190;
-    --secundario:#ffce00;
-    --secundarioOscuro:rgb(233,287,2);
-    --blanco:#fff;
+:root {
+    --primario: #9323A9;
+    --primarioOscuro: #891190;
+    --secundario: #ffce00;
+    --secundarioOscuro: rgb(233, 287, 2);
+    --blanco: #fff;
     --negro: #000;
 
     --fuentePrincipal: 'Staatliches', cursive;
@@ -13,105 +13,216 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%;
-  }
-  *, *:before, *:after {
+}
+
+*,
+*:before,
+*:after {
     box-sizing: inherit;
-  }
+}
 
-  /* globales */
+/* globales */
 
-  body{
-      background-color: var(--primario);
-      font-size: 1.6rem;
-      line-height: 1.5rem;
-  }
+body {
+    background-color: var(--primario);
+    font-size: 1.6rem;
+    line-height: 1.5rem;
+}
 
-  p{
-      font-size: 1.8rem;
-      font-family: Arial, Helvetica, sans-serif;
-      color: var(--blanco);
-  }
+p {
+    font-size: 1.8rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--blanco);
+}
 
-  a{
-      text-decoration: none;
-  }
+a {
+    text-decoration: none;
+}
 
-  img{
-      max-width: 100%;
-  }
+img {
+    max-width: 100%;
+}
 
-  .contenedor{
-      max-width: 120rem;
-      margin: 0 auto;
-  }
+.contenedor {
+    max-width: 120rem;
+    margin: 0 auto;
+}
 
-  h1,
-  h2,
-  h3{
-      text-align: center;
-      color: var(--secundario);
-      font-family: var(--fuentePrincipal);
-  }
+h1,
+h2,
+h3 {
+    text-align: center;
+    color: var(--secundario);
+    font-family: var(--fuentePrincipal);
+}
 
-  h1{
-      font-size: 4rem;
-  }
-  h2{
-      font-size: 3.2rem;
-  }
-  h3{
-      font-size: 2.4rem;
-  }
+h1 {
+    font-size: 4rem;
+}
 
-  /* header  */
-   .header{
-       display: flex;
-       justify-content: center;
-   }
+h2 {
+    font-size: 3.2rem;
+}
 
-   .header__logo{
-       margin: 3rem 0;
-   }
+h3 {
+    font-size: 2.4rem;
+}
 
-   /* footer  */
+/* header  */
+.header {
+    display: flex;
+    justify-content: center;
+}
 
-   .footer{
-       background-color: var(--primarioOscuro);
-       padding: 1rem 0;
-       margin-top: 2rem;
+.header__logo {
+    margin: 3rem 0;
+}
 
-   }
+/* footer  */
 
-   .footer__texto{
-       font-family: var(--fuentePrincipal);
-       text-align: center;
-       font-size: 2.2rem;
+.footer {
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    margin-top: 2rem;
 
-   }
+}
 
-   /* navegacion */
-   .navegacion{
-       background-color: var(--primarioOscuro);
-       padding: 1.5rem 0;
-       display: flex;
-       justify-content: center;
-       /* gap: 3rem; forma de separacion nueva..no la soporta todos los navegadores */
-   }
+.footer__texto {
+    font-family: var(--fuentePrincipal);
+    text-align: center;
+    font-size: 2.2rem;
 
-   .navegacion__enlace{
-       font-family: var(--fuentePrincipal);
-       color: var(--blanco);
-       font-size: 3rem;
-       margin-right: 2rem;
+}
 
-   }
+/* navegacion */
+.navegacion {
+    background-color: var(--primarioOscuro);
+    padding: 1.5rem 0;
+    display: flex;
+    justify-content: center;
+    /* gap: 3rem; forma de separacion nueva..no la soporta todos los navegadores */
+}
 
-   .navegacion__enlace:last-of-type{
-       margin-right: 0;
-   }
+.navegacion__enlace {
+    font-family: var(--fuentePrincipal);
+    color: var(--blanco);
+    font-size: 3rem;
+    margin-right: 2rem;
+
+}
+
+.navegacion__enlace:last-of-type {
+    margin-right: 0;
+}
+
+.navegacion__enlace--activo,
+.navegacion__enlace:hover {
+    color: var(--secundario);
+}
+
+/* grid  */
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2rem;
+
+}
+
+@media(min-width:500px) {
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+
+@media(min-width:768px) {
+    .grid {
+
+        grid-template-columns: repeat(3, 1fr);
+
+    }
+}
+
+/* productos  */
+.producto {
+    background-color: var(--primarioOscuro);
+    padding: 1rem;
+
+}
+
+.producto__imagen {
+    width: 100%;
+
+}
+
+.producto__informacion {}
+
+.producto__nombre {
+    font-size: 4rem;
+
+}
+
+.producto__precio {
+    font-size: 2.8rem;
+    color: var(--secundario);
+
+}
+
+.producto__nombre,
+.producto__precio {
+    text-align: center;
+    font-family: var(--fuentePrincipal);
+    margin: 3rem 0;
+    line-height: 1.1rem;
+}
+
+/* graficos  */
+
+.grafico {
+    min-height: 30rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
+
+.grafico--camisas {
+    grid-row: 6/7;
+    background-image: url(../img/grafico1.jpg);
+    grid-row: 4/5;
+
+}
+
+.grafico--node {
+    grid-row: 12/13;
+    background-image: url(../img/grafico2.jpg);
+    grid-row: 15/16;
+}
+
+
+
+
+
+@media(min-width:500px) {
+    .grafico--camisas {
+        grid-row: 2/3;
+        grid-column: 1/3;
+    }
+
+    .grafico--node {
+        grid-row: 8/9;
+        grid-column: 1/3;
+    }
+
+
+
+}
+
+@media(min-width:768px){
+    .grafico--node {
+        grid-row: 5/6;
+        grid-column: 2/4;
+    }
    
-   .navegacion__enlace--activo,
-   .navegacion__enlace:hover{
-       color: var(--secundario);
-   }
-
+}
